Sun Feb  5 23:29:31 2006  Tanaka Akira  <akr@m17n.org>

	* ruby.h (struct RStruct): embed 3 or less elements structs.
	  (RSTRUCT_LEN): defined for accessing struct members.
	  (RSTRUCT_PTR): ditto.

	* struct.c: use RSTRUCT_LEN and RSTRUCT_PTR.
	  (struct_alloc): allocate small structs in embedded format.
	  (rb_struct_init_copy): ditto.

	* gc.c (gc_mark_children): use RSTRUCT_LEN and RSTRUCT_PTR.
	  (obj_free): ditto.

	* marshal.c (w_object): use RSTRUCT_LEN and RSTRUCT_PTR.

Sun Feb  5 21:01:49 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* numeric.c (fix_to_s): removed workaround for radix 2. Historically,
	  rb_fix2str can only handle radix 8, 10, 16. (Rev1.37) But for now,
	  it can handle radix 2..36. [ruby-Bugs#3438] [ruby-core:7300]

Sun Feb  5 18:49:00 2006  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (add_field, get_fields): keep 1.8.2
	  compatibility.  This patch is contributed by Rob Pitt.

Sun Feb  5 16:33:50 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/mkmf.rb (create_makefile): Kernel#sub! was removed on HEAD.

Sun Feb  5 14:26:54 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/pstore.rb: should return default value if name is not found.
	  [ruby-core:7304]

	* lib/pstore.rb: should raise PStore::Error if not in transaction.

Sat Feb  4 22:51:43 2006  Tanaka Akira  <akr@m17n.org>

	* eval.c: apply the FreeBSD getcontext/setcontext workaround
	  only before FreeBSD 7-CURRENT.

Sat Feb  4 21:10:06 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (LK_ERR): ERROR_NOT_LOCKED is not an error.
	  In such situation, flock() should return 0.

Sat Feb  4 15:52:56 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* numeric.c (fix_to_s): (2**32).to_s(2) fails with exception where
	  sizeof(int) == 4 < sizeof(long). [ruby-core:7300]

Sat Feb  4 15:02:05 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* oniguruma.h: merge Oniguruma 4.0.0  [ruby-dev:28290]
